# critical

./: Cargo.toml  README.md  dependencies.sh  introspect.sh
src/: auth.graphql  auth.rs  clean.rs  current_musicbot.graphql  current_musicbot.rs  err_on_some.rs  errors.rs  filter.rs  folders.rs  group_dispatch.rs  helpers.rs  lib.rs  local.rs  main.rs  mp3_file.rs  music.rs  musicbot.json  musicbot_admin.json  playlist.rs  queries.rs  register.graphql  register.rs  scan.rs  search.rs  stats.rs  types.rs  upsert_music.rs  user_filter.rs  user_musics.rs
src/commands/: database.rs  filter.rs  group_dispatch.rs  local.rs  mod.rs  opts.rs  root.rs  user.rs
src/database/: mod.rs
src/database/schema/: drop_schemas.sql
src/database/schema/admin/: create_database.sql  create_extensions.sql  create_role.sql  create_schemas.sql  drop_database.sql  drop_extensions.sql  drop_role.sql
src/database/schema/user/: aggregates.sql  drop_functions.sql  filter.sql  music.sql  schemas.sql  stat.sql  user.sql
src/filter/: mod.rs
src/filter/queries/: count.graphql  count.rs  delete.graphql  delete.rs  get.graphql  get.rs  list.graphql  list.rs  upsert.graphql  upsert.rs
src/fingerprinting/: algorithm.rs  communication.rs  ffmpeg_wrapper.rs  hanning.rs  mod.rs  signature_format.rs
src/music/: albums.rs  artists.rs  bests.rs  cache.rs  clean.rs  config.rs  errors.rs  filter.rs  flac_file.rs  folders.rs  genres.rs  helpers.rs  keywords.rs  mod.rs  mp3_file.rs  music.rs  music_file.rs  music_input.rs  music_result.rs  playlist.rs  queries.rs  ratings.rs  remove.rs  scan.rs  search.rs  shazam.rs  stats.rs  vertex.rs
src/music/queries/: clean.graphql  clean.rs  playlist.graphql  playlist.rs  stats.graphql  stats.rs  upsert.rs  upsert_music.graphql
src/user/: accounts.rs  authenticated_user.rs  login.rs  mod.rs  register.rs  unregister.rs  update.rs  whoami.rs
src/user/queries/: auth.rs  current_musicbot.rs  register.graphql  register.rs  unregister.graphql  unregister.rs  update.graphql  update.rs  user_account_list.graphql  user_account_list.rs  whoami.graphql  whoami.rs
