[package]
name = "critical"
default-run = "critical"
description = "critical musicbot client"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4.4", features = ["derive"] }
metaflac = "0.2.4"
id3 = "1.0"
mp3-duration = "0.1.10"
walkdir = "2"
env_logger = "0.11.3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = "^1.0"
serde_json = "^1.0"
indicatif = "0.17.0"
itertools = "0.13.0"
prettytable-rs = "^0.10"
uuid = { version = "1.0", features = ["v4"] }
enum_dispatch = "0.3.7"
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.57"
const_format = "0.2.31"
indexmap = "2"
whoami = "1"
edgedb-derive = "0.5.2"
edgedb-tokio = "0.5.1"
edgedb-protocol = "0.6.1"
