[package]
name = "critical"
default-run = "critical"
description = "critical musicbot client"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
clap = { version = "4.4.4", features = ["derive"] }
metaflac = "0.2.4"
id3 = "1.0"
mp3-duration = "0.1.10"
env_logger = "0.11.3"
reqwest = { version = "0.12.14" }
serde = "^1.0"
serde_json = "^1.0"
indicatif = "0.17.0"
itertools = "0.14.0"
uuid = { version = "1.0", features = ["v4"] }
enum_dispatch = "0.3.7"
tokio = { version = "1.44.1" }
async-trait = "0.1.57"
const_format = "0.2.31"
indexmap = "2"
whoami = "1"
gel-derive = "0.7.0"
gel-tokio = "0.10.1"
gel-protocol = "0.8.0"
async-fs = "2.1.2"
rand = "0.9.0"
async-walkdir = "2.0.0"
futures-lite = "2.3.0"
tabled = "0.17.0"
walkdir = "2.5.0"
serde-keyvalue = "0.1.0"
indradb-lib = "4.0.0"
homedir = "0.3.4"
rmp-serde = "1.3.0"
scopeguard = "1.2.0"
num-traits = "0.2.19"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
missing_fields_in_debug = { level = "allow", priority = 1 }
missing_errors_doc ={ level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }